# crumble_os

./: CMakeLists.txt  Makefile  README.md  grub.cfg  post_build.sh
bootloader/: bootloader.asm
entry/: entry.asm
src/: kernel.c
